Update model for AnyValue in parameter
